<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.jaydi.ruby.MainActivity" >

    <FrameLayout
        android:id="@+id/frame_main_container_collect"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <FrameLayout
        android:id="@+id/frame_main_container_use"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/frame_main_container_mypage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_main_nav_collect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/enabler_pink_red"
            android:gravity="center"
            android:onClick="changeNav"
            android:text="@string/nav_collect"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <Button
            android:id="@+id/button_main_nav_use"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/enabler_pink_red"
            android:gravity="center"
            android:onClick="changeNav"
            android:text="@string/nav_use"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <Button
            android:id="@+id/button_main_nav_mypage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/enabler_pink_red"
            android:gravity="center"
            android:onClick="changeNav"
            android:text="@string/nav_mypage"
            android:textColor="@color/white"
            android:textSize="10sp" />
    </LinearLayout>

</LinearLayout>