<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jaydi.ruby.SocialActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_social_nav_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/enabler_pink_red"
            android:gravity="center"
            android:onClick="changeNav"
            android:text="@string/nav_search"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <Button
            android:id="@+id/button_social_nav_pairs"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/enabler_pink_red"
            android:gravity="center"
            android:onClick="changeNav"
            android:text="@string/nav_pairs"
            android:textColor="@color/white"
            android:textSize="10sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:id="@+id/linear_social_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/edit_social_name"
                    android:layout_width="0dp"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="searchUser"
                    android:text="@string/search" />
            </LinearLayout>

            <ListView
                android:id="@+id/list_social_users"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>

        <ListView
            android:id="@+id/list_social_pairs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
    </FrameLayout>

</LinearLayout>